Name: elm-dev
Version: 0.2.0

Synopsis:
    The `elm-dev` command line interface.

Description:
    This includes commands like `elm make`, `elm repl`, and many others
    for helping make Elm developers happy and productive.

Homepage: https://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Matt Griffith
Maintainer: info@elm-lang.org

Category: Compiler, Language

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm/compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Executable elm-dev
    default-language: Haskell2010
    if flag(dev)
        ghc-options: -O0 -Wall -Werror
    else
        ghc-options: -O2 -rtsopts -threaded "-with-rtsopts=-N -qg -A32m"
        -- add -eventlog for (elm make src/Main.elm +RTS -l; threadscope elm.eventlog)
        -- https://www.oreilly.com/library/view/parallel-and-concurrent/9781449335939/

    Hs-Source-Dirs:
        compiler/src
        builder/src
        terminal/impl
        terminal/src
        -- elmx
        ext-common
        ext-sentry
        -- elm-dev
        ext-dev
        ext-generate
        ext-watchtower

    other-extensions:
        TemplateHaskell

    Main-Is:
        Main.hs

    other-modules:
        Bump
        Develop
        Diff
        Init
        Install
        Make
        Publish
        Repl

        -- terminal args
        Terminal
        Terminal.Chomp
        Terminal.Error
        Terminal.Helpers
        Terminal.Internal

        -- from terminal/
        Develop.Generate.Help
        Develop.Generate.Index
        Develop.StaticFiles
        Develop.StaticFiles.Build

        -- from builder/
        Build
        BackgroundWriter
        Deps.Bump
        Deps.Diff
        Deps.Registry
        Deps.Solver
        Deps.Website
        File
        Generate
        Http
        Reporting
        Reporting.Exit
        Reporting.Exit.Help
        Reporting.Task
        Stuff

        -- Elm things
        Elm.Outline
        Elm.Details
        --
        Elm.Compiler.Imports
        Elm.Compiler.Type
        Elm.Compiler.Type.Extract
        Elm.Constraint
        Elm.Docs
        Elm.Float
        Elm.Interface
        Elm.Kernel
        Elm.Licenses
        Elm.Magnitude
        Elm.ModuleName
        Elm.Package
        Elm.String
        Elm.Version

        -- data structures
        Data.Bag
        Data.Index
        Data.Map.Utils
        Data.Name
        Data.NonEmptyList
        Data.OneOrMore
        Data.Utf8

        -- json
        Json.Decode
        Json.Encode
        Json.String

        -- from compiler/
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.Utils.Binop
        AST.Utils.Shader
        AST.Utils.Type
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Generate.Html
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Functions
        Generate.JavaScript.Name
        Generate.Mode
        Nitpick.Debug
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Keyword
        Parse.Module
        Parse.Number
        Parse.Pattern
        Parse.Shader
        Parse.Space
        Parse.String
        Parse.Symbol
        Parse.Type
        Parse.Variable
        Parse.Primitives
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Import
        Reporting.Error.Json
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind
        Paths_elm_dev

        -- elmx
        -- ext-common
        Ext.Common
        Ext.ElmFormat
        Ext.CompileHelpers.Generic
        Ext.CompileHelpers.Disk
        Ext.CompileHelpers.Memory

        -- ext-sentry
        Ext.Sentry
        Ext.Filewatch

        -- ext-performance-cache
        Ext.FileProxy
        Ext.FileCache
        Ext.VirtualFile
        Ext.CompileProxy
        Ext.CompileMode
        
        

        Ext.Test.Discover
        Ext.Test.Introspect
        Ext.Test.Generate
        Ext.Test.Compile
        Ext.Test.Runner
        Ext.Test.Templates.Loader
        Ext.Test.Install
        Ext.Test.Result
        Ext.Test.Result.Report
        Ext.Install

        -- 
        Ext.MemoryCached.BackgroundWriter
        Ext.MemoryCached.Build
        Ext.MemoryCached.Details
        Ext.MemoryCached.Generate
        Ext.Disk.Build
        Ext.Project.Find

        -- elm-dev cli interface
        Terminal.Dev.Args
        Terminal.Dev.Error
        Terminal.Dev.Out
        Terminal.Colors
        CommandParser
        MainDev

        -- Watchtower
        Watchtower.Editor

        Watchtower.Live
        Watchtower.Live.Client
        Watchtower.Live.Compile

        Watchtower.Questions
        
        Watchtower.Server
        Watchtower.Server.Run
        Watchtower.Server.JSONRPC
        Watchtower.Server.MCP
        Watchtower.Server.MCP.Protocol
        Watchtower.Server.MCP.Uri
        Watchtower.Server.MCP.ProjectLookup
        Watchtower.Server.MCP.Docs
        Watchtower.Server.MCP.Guides
        Watchtower.Server.Dev
        Watchtower.Server.DevWS
        Watchtower.Server.LSP
        Watchtower.Server.LSP.Protocol
        Watchtower.Server.LSP.Helpers
        Watchtower.Server.LSP.EditorsOpen
        Watchtower.Server.Daemon
        Watchtower.Server.Proxy
        

        Watchtower.StaticAssets
        Watchtower.Test
        Watchtower.Version
        Watchtower.Websocket
        Watchtower.AST.Lookup
        Watchtower.AST.Definition
        Watchtower.AST.References
        
        Watchtower.State.Compile
        Watchtower.State.Discover
        Watchtower.State.Project
        

        -- elm-dev
        ElmDevElmVersion
        Ext.Encode
        Ext.Dev
        Ext.Dev.Help
        Ext.Dev.Docs
        Ext.Dev.EntryPoints
        Ext.Dev.Package
        Ext.Dev.Project
        Ext.Dev.Project.Ports
        Ext.Dev.Warnings
        Ext.Dev.Canonicalize
        Ext.Dev.Find
        Ext.Dev.Find.Canonical
        Ext.Dev.CallGraph
        Ext.Dev.Explain
        Ext.Dev.Find.Source
        Ext.Dev.InScope
        Ext.Dev.Lookup
        Ext.Dev.Json.Encode
        Ext.Dev.Usage
        Ext.Dev.Imports
        Ext.Log
        Ext.Sanity

        -- alternate reporting
        Ext.Type.Error
        Ext.Reporting.Error
        Ext.Reporting.Render.Code
        Ext.Reporting.Error.Type
        Ext.Reporting.Error.Syntax
        Ext.Reporting.Error.Pattern
        Ext.Reporting.Error.Main
        Ext.Reporting.Error.Json
        Ext.Reporting.Error.Import
        Ext.Reporting.Error.Docs
        Ext.Reporting.Error.Canonicalize
        Ext.Render.Type
        

        Gen.Commands
        Gen.Commands.Init
        Gen.Commands.Make
        Gen.Javascript
        Gen.Config
        Gen.Templates
        Gen.Templates.Loader
        Gen.Generate
        Gen.RunConfig

        Modify
        Modify.Ui
        Modify.Inject.Loader
        Modify.PackageOverride


        Util
        Llamadera
        StandaloneInstances
        Test




    Build-depends:
        ansi-terminal,
          -- >= 0.8 && < 0.9,
        ansi-wl-pprint >= 0.6.8 && < 0.7,
        base >=4.11 && <5,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.11 && < 0.12,
        containers,
          -- >= 0.5.8.2 && < 0.6,
        directory >= 1.2.3.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        file-embed,
        filelock,
        filepath >= 1 && < 2.0,
        ghc-prim >= 0.5.2,
        haskeline,
        HTTP >= 4000.2.5 && < 4000.5,
        http-client >= 0.6 && < 0.8,
        http-client-tls >= 0.3 && < 0.4,
        http-types >= 0.12 && < 1.0,
        language-glsl >= 0.3,
        mtl >= 2.2.1 && < 3,
        network,
          -- >= 2.4 && < 2.7,
        parsec,
        temporary,
        process,
        raw-strings-qq,
        scientific,
        SHA,
        snap-core,
        snap-server,
        template-haskell,
        time >= 1.9.1,
        unordered-containers,
        utf8-string,
        vector,
        zip-archive,

        -- ext-common
        text,
        hashtables,
        githash,

        -- ext-sentry
        clock,
        fold-debounce,
        formatting,
        fsnotify,

        -- watchtower
        stm,
        unicode-show,
        websockets,
        websockets-snap,
        aeson,
        aeson-pretty

    if os(windows)
        Build-depends:
            Win32
    else
        Build-depends:
            unix
